disable online form

--- a/s6_contact.htm
+++ b/s6_contact.htm
@@ -630,6 +630,7 @@ function MM_swapImage() { //v3.0
 週一到週六） 04 2631-0202　04 2631-0505<br />
                       </p>
                     </div>
+                    <!--
                     <div><img src="img_page_about/banner-contact-mail.gif" alt="E-mail聯絡" width="600" height="50" /></div>
 					<p>您填寫的資料，我們負有保密的義務，您的問題不會刊登在網站上，而我們的回信，需至您指定的E-mail才能觀看。</p>
 				  <form action="http://toolkit.url.com.tw/qform/qform.php?servername=globaldental.com.tw&serverid=43940" method="post" onSubmit="MM_validateForm('信件內容','','R');return document.MM_returnValue">
@@ -670,7 +671,7 @@ function MM_swapImage() { //v3.0
                   <td><input type="submit" name="submit" value="將以上訊息送出"></td>
                 </tr>
               </table>
-          </form>
+          </form>-->
 				    <p>&nbsp;</p>
 				    <!-- InstanceEndEditable -->				  </div>
 			    </div>
