更新看診與掛號時間

--- a/index.htm
+++ b/index.htm
@@ -74,8 +74,9 @@ text-align:center;
 
 
 週一到週六<br />
-早上 9:00 - 12:00<br />
-午晚 2:30 - 10:00 </div></td>
+9 AM - 11:30 AM<br />
+2:30 PM - 9:30 PM<br />
+（最後掛號時間以現場為主）</div></td>
       <td bgcolor="#f1ede2">&nbsp;</td>
       <td width="568" height="132" rowspan="5" valign="middle" bgcolor="#f1ede2"><p><b>全球牙醫診所</b> <small>（請先來電預約）</small><br />
               <small>電話</small> <small>(04)</small> <b>2631-0202</b> , <small>(04)</small> <b>2631-0505</b><br />
